src/objects/c2g__AllocationScheduleLog__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationscheduler</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__AllocationSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AllocationSchedule__c</label>
        <referenceTo>c2g__AllocationSchedule__c</referenceTo>
        <relationshipLabel>Allocation Schedule Logs</relationshipLabel>
        <relationshipName>Allocation_Schedule_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IsLastRun__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the object represents the most recent schedule execution.</description>
        <label>Is Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__RunDate__c</fullName>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <label>zDeprecated:Allocation Schedule Log</label>
    <nameField>
        <displayFormat>AS_L-{0}</displayFormat>
        <label>Allocation Schedule Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedule Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>